# geldstrom

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
apps/admin/: alembic.ini  pyproject.toml
apps/admin/admin/api/: auth.py  error_handlers.py  main.py
apps/admin/admin/api/api_keys/: __init__.py  routes.py  schemas.py
apps/admin/admin/api/bank_directory/: __init__.py  routes.py  schemas.py
apps/admin/admin/api/webhooks/: paypal.py
apps/admin/admin/application/api_keys/: __init__.py  use_cases.py
apps/admin/admin/application/bank_directory/: __init__.py  use_cases.py
apps/admin/admin/domain/: exceptions.py
apps/admin/admin/domain/api_keys/: __init__.py
apps/admin/admin/domain/bank_directory/: __init__.py
apps/admin/admin/infrastructure/cache/: __init__.py  endpoint_cache.py  key_cache.py
apps/admin/admin/infrastructure/encryption/: __init__.py  fernet_encryptor.py
apps/admin/admin/infrastructure/grpc/: __init__.py  bank_directory_servicer.py  key_validation_servicer.py  server.py
apps/admin/admin/infrastructure/hashing/: __init__.py  argon2_hasher.py
apps/admin/admin/infrastructure/persistence/: __init__.py  database.py
apps/admin/alembic/: README  env.py
apps/admin/alembic/versions/: 20250101_000000_001_initial_schema.py
apps/gateway/: Dockerfile  README.md  pyproject.toml
apps/gateway/gateway/: __init__.py  config.py  lifecycle.py  logging_config.py  main.py
apps/gateway/gateway/api/: auth.py  main.py  middleware.py  routes.py  schemas.py
apps/gateway/gateway/application/: __init__.py  use_cases.py
apps/gateway/gateway/application/administration/: __init__.py
apps/gateway/gateway/application/audit/: __init__.py  audit_service.py
apps/gateway/gateway/application/auth/: __init__.py
apps/gateway/gateway/application/banking/: __init__.py
apps/gateway/gateway/application/common/: __init__.py  errors.py  readiness.py  time.py
apps/gateway/gateway/application/consumer/: __init__.py
apps/gateway/gateway/application/health/: __init__.py
apps/gateway/gateway/application/ports/: __init__.py  application_factory.py  bank_catalog.py  bank_metadata.py  cache_factory.py  gateway_readiness_service.py  repository_factory.py
apps/gateway/gateway/application/product_registration/: __init__.py
apps/gateway/gateway/domain/: __init__.py  dispatch.py  errors.py  exceptions.py  ports.py
apps/gateway/gateway/domain/audit/: __init__.py  models.py  repository.py
apps/gateway/gateway/domain/banking/: __init__.py
apps/gateway/gateway/domain/banking_gateway/: __init__.py  operations.py  ports.py  repositories.py  services.py  value_objects.py
apps/gateway/gateway/domain/consumer_access/: __init__.py  model.py  repositories.py  services.py  value_objects.py
apps/gateway/gateway/domain/institution_catalog/: __init__.py  model.py  repositories.py  services.py  value_objects.py
apps/gateway/gateway/domain/product_registration/: __init__.py  model.py  repositories.py  value_objects.py
apps/gateway/gateway/domain/session/: __init__.py
apps/gateway/gateway/domain/shared/: __init__.py  ids.py  protocols.py
apps/gateway/gateway/infrastructure/: __init__.py  gateway_factory.py
apps/gateway/gateway/infrastructure/banking/: __init__.py  directory.py
apps/gateway/gateway/infrastructure/cache/: __init__.py
apps/gateway/gateway/infrastructure/crypto/: __init__.py  api_key_service.py  product_key_service.py
apps/gateway/gateway/infrastructure/grpc/: __init__.py
apps/gateway/gateway/infrastructure/readiness/: __init__.py  gateway_readiness_service.py
apps/gateway/gateway/infrastructure/session/: __init__.py  api_key_validator.py  audit_publisher.py  challenge_repo.py
apps/gateway/gateway/presentation/http/: api.py  dependencies.py  lifecycle.py
apps/gateway_admin/: Dockerfile  README.md  pyproject.toml
apps/gateway_admin/frontend/: index.html  package-lock.json  package.json  vite.config.js
apps/gateway_admin/frontend/src/: App.jsx  main.jsx  styles.css
apps/gateway_admin/frontend/src/components/: AddUserForm.jsx  CatalogUpload.jsx  CatalogUpload.test.jsx  ConfirmDialog.jsx  ProductRegistration.jsx  ProductRegistration.test.jsx  Toast.jsx  UserList.jsx
apps/gateway_admin/gateway_admin/: config.py
apps/gateway_admin/gateway_admin/application/: __init__.py
apps/gateway_admin/gateway_admin/application/commands/: __init__.py  create_user.py  delete_user.py  disable_user.py  initialize_admin.py  reactivate_user.py  rotate_user_key.py  sync_institute_catalog.py  update_product_registration.py  update_user.py
apps/gateway_admin/gateway_admin/application/dtos/: __init__.py  backend_state.py  institute_catalog.py  product_registration.py  user.py
apps/gateway_admin/gateway_admin/application/factories/: __init__.py  admin_factory.py  service_factory.py
apps/gateway_admin/gateway_admin/application/queries/: __init__.py  get_product_registration.py  get_user.py  inspect_backend_state.py  list_audit_events.py  list_users.py
apps/gateway_admin/gateway_admin/domain/: __init__.py  institutes.py  product.py  users.py
apps/gateway_admin/gateway_admin/infrastructure/: __init__.py
apps/gateway_admin/tests/: conftest.py  test_api_catalog.py  test_api_product_registration.py  test_api_users.py  test_config_files.py  test_email_service.py  test_get_product_registration_query.py  test_pbt_product_registration.py
apps/gateway_admin_cli/: Dockerfile  README.md  pyproject.toml
apps/gateway_admin_cli/gateway_admin_cli/: __init__.py  config.py
apps/gateway_admin_cli/gateway_admin_cli/cli/: _common.py  catalog.py  db.py  inspect.py  main.py  product.py  users.py
apps/gateway_admin_cli/gateway_admin_cli/domain/: __init__.py  errors.py  institutes.py  users.py
apps/gateway_admin_cli/gateway_admin_cli/infrastructure/: __init__.py  admin_factory.py  api_key_service.py  institute_csv_reader.py  institute_repository.py  notify_publishers.py  product_repository.py  user_repository.py
(+654 files in other folders)
