[project]
name = "geldstrom-monorepo"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "geldstrom",
    "gateway",
    "admin",
]

[tool.uv.sources]
geldstrom = { workspace = true }
gateway = { workspace = true }
admin = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/geldstrom",
    "apps/gateway",
    "apps/admin",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "grpcio-tools>=1.62",
    "hypothesis>=6.100",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "B905", "ARG001", "ARG002", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["geldstrom", "gateway", "admin"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "B", "SIM"]
"tests/integration/**/*" = ["C401", "F841"]
"packages/geldstrom/**/__init__.py" = ["E402"]
"packages/geldstrom/**/enums.py" = ["UP042"]
"packages/geldstrom/**/tan.py" = ["UP042"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sqlalchemy".msg = "DB drivers are forbidden in gateway — zero-knowledge boundary violation"
"asyncpg".msg = "DB drivers are forbidden in gateway — zero-knowledge boundary violation"
"psycopg2".msg = "DB drivers are forbidden in gateway — zero-knowledge boundary violation"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=packages --cov=apps --cov-report=term-missing"
