[project]
name = "geldstrom-workspace"
version = "0.0.0"
description = "uv workspace for the geldstrom monorepo"
requires-python = ">=3.13"
dependencies = [
    "geldstrom",
    "gateway",
    "gateway-admin-cli",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.0,<8.0",
    "ruff>=0.8,<1.0",
    "testcontainers>=4.9,<5.0",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.uv.sources]
geldstrom = { workspace = true }
gateway = { workspace = true }
gateway-admin-cli = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["packages", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (requires 3.10+)
    "ARG001", # unused function argument (common in protocols/interfaces)
    "ARG002", # unused method argument
    "SIM108", # ternary operator (not always more readable)
]

[tool.ruff.lint.isort]
known-first-party = ["geldstrom", "gateway", "gateway_admin_cli"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (require bank credentials)",
    "live_bank: marks tests that hit real FinTS bank backends and cannot run via testcontainers",
    "slow: marks tests as slow running",
]
