[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "gateway-admin-cli"
version = "0.0.1"
description = "Administrative CLI for the Geldstrom gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gateway-contracts",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "argon2-cffi>=23.1",
    "typer>=0.15",
    "rich>=13.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
gw-admin = "gateway_admin_cli.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["gateway_admin_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/gateway_admin_cli",
    "/README.md",
    "/pyproject.toml",
]
